[package]
name = "wandu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
